fixed spacing and opacity for Edge

--- a/src/assets/css/custom.css
+++ b/src/assets/css/custom.css
@@ -15,7 +15,7 @@
 
 .black-bg-1 {
 	background-color: rgba(1,1,1,0.5);
-	padding: 40px 5%;
+	padding: 40px 15px;
 }
 
 .c-layout-revo-slider-12 .c-main-title {
